--- a/_config.yml
+++ b/_config.yml
@@ -77,24 +77,24 @@ frontpage_introduction_banner:
   description: frontpage.intro_body
 
 frontpage_goals_grid:
-  title: Our data for Sustainable Development Goal indicators
-  description: Click on each goal for our Sustainable Development Goal global indicator data.
+  title: 지속가능발전목표의 지표별 데이터
+  description: 지속가능발전목표의 지표 데이터를 열람하시려면 각 목표를 클릭하십시오.
 
-frontpage_cards:
-  - title: frontpage.download_all
-    include: components/download-all-data.html
-  - title: Lorem ipsum
-    content: |
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mollis
-      cursus est sed dapibus.
-    button_label: Read more
-    button_link: https://example.com
-  - title: Nam vestibulum
-    content: |
-      Nam vestibulum, purus quis porttitor imperdiet, nisl sem mollis nisl, a
-      interdum risus enim vitae tortor. Donec feugiat accumsan rutrum.
-    button_label: Read more
-    button_link: https://example.com
+  #frontpage_cards:
+  #  - title: frontpage.download_all
+  #    include: components/download-all-data.html
+  #  - title: Lorem ipsum
+  #    content: |
+  #      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mollis
+  #      cursus est sed dapibus.
+  #    button_label: Read more
+  #    button_link: https://example.com
+  #  - title: Nam vestibulum
+  #    content: |
+  #      Nam vestibulum, purus quis porttitor imperdiet, nisl sem mollis nisl, a
+  #      interdum risus enim vitae tortor. Donec feugiat accumsan rutrum.
+  #    button_label: Read more
+  #    button_link: https://example.com
 
 # Pages
 collections:
