hide empty metadata

--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,8 @@ create_pages:
 analytics:
   ga_prod: ''
 
+hide_empty_metadata: true
+
 # Sticky share buttons (facebook, twitter and email)
 #sharethis_property: '5d279253faeee40012f195e1'
 
