--- a/_config.yml
+++ b/_config.yml
@@ -212,3 +212,11 @@ breadcrumbs:
       path: /
     - label: general.goals
       path: /goals
+
+metadata_tabs:
+  - scope: national
+    title: indicator.national_metadata
+    description: indicator.national_metadata_blurb
+  - scope: global
+    title: indicator.global_metadata
+    description: indicator.global_metadata_blurb
