--- a/_config.yml
+++ b/_config.yml
@@ -135,8 +135,8 @@ menu:
 footer_menu:
   - path: mailto:sdgkostat@korea.kr
     translation_key: menu.contact_us
-  - path: https://twitter.com/kostatin
-    translation_key: general.twitter
+  - path: /guidance
+    translation_key: menu.guidance
 
 # Configure the text (or "translation key") to be used on the
 # non-global metadata tab.
