--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -14,7 +14,7 @@
 baseurl: ""
 environment: production
 # Replace my-github-org and open-sdg-data-starter as needed.
-remote_data_prefix: "https://kostat-sdg-kor.github.io/sdg-site-beta"
+remote_data_prefix: "https://kostat-sdg-kor.github.io/sdg-indicators"
 
 analytics:
   # For production, you likely want to enter a Google Analytics code below.
