--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Ruby 2.6
       uses: actions/setup-ruby@v1
       with:
-        ruby-version: 3.0
+        ruby-version: 2.6.x
     - name: Build the site
       run: |
         gem install bundler
